--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Memory Game by Giselle Chacon</title>
     <!-- Bootstrap 4.1.3 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- CSS style -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- App Javascript -->
-    <script src="js/app.js"></script>
+
     <!-- EmailJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("user_82QFa7hBZ0VpcOO1lOLOE");
-        })();
-    </script>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
+     <!-- Audio files -->
+     <audio id="success-sound" src="audio/success.mp3"></audio>
+     <audio id="red-sound" src="audio/red.mp3"></audio>
+     <audio id="green-sound" src="audio/green.mp3"></audio>
+     <audio id="yellow-sound" src="audio/yellow.mp3"></audio>
+     <audio id="blue-sound" src="audio/blue.mp3"></audio>
+     <audio id="failure-sound" src="audio/failure.mp3"></audio>
+
     <!-- Navbar menu -->
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand" href="index.html">MEMORY GAMES</a>
@@ -60,90 +65,71 @@
             </div>
         </div>
     </header>
+
     <!-- Memory game -->
     <div id="memory-game" class="container-fluid">
-        <div>
-            <h2>MEMORY CARD GAME</h2>
-        </div>
-        <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
-            <div class="card-body bg-transparent">
-                <h4>SCORE: <span id="result"></span></h4>
-                <div class="grid">
-                </div>
-            </div>
-            <div class="card-footer">
-                <h4>Rules:</h4>
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
-                    <li class="list-group-item list-group-item-dark">To win find all the matches</li>
-                    <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
-                    <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again
-                    </li>
-                    <li class="list-group-item list-group-item-dark">Enjoy!</li>
-                </ul>
-            </div>
-        </div>
+        <h2>MEMORY CARD GAME</h2>
+        <div id="game"></div>
     </div>
+    <div class="card-footer">
+        <h4>Rules:</h4>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
+            <li class="list-group-item list-group-item-dark">To win find all the matches</li>
+            <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
+            <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again
+            </li>
+            <li class="list-group-item list-group-item-dark">Enjoy!</li>
+        </ul>
     </div>
 
     <!-- Simon game -->
-    <!-- Audio files -->
-    <audio id="clip1">
-        <source src="audio/green.mp3">
-    </audio>
-    <audio id="clip2">
-        <source src="audio/red.mp3">
-    </audio>
-    <audio id="clip3">
-        <source src="audio/yellow.mp3">
-    </audio>
-    <audio id="clip4">
-        <source src="audio/blue.mp3">
-    </audio>
-    <section id="simon-game" class="container-fluid">
-        <div>
-            <h2>SIMON</h2>
-        </div>
-        <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
-            <div class="card-body bg-transparent">
-                <div id="outer-circle">
-                    <div id="top-left"></div>
-                    <div id="top-right"></div>
-                    <div id="bottom-left"></div>
-                    <div id="bottom-right"></div>
-                    <div id="inner-circle">
-                        <button class="button" id="start">START</button>
-                        <div id="switches">
-                            <input type="checkbox" class="toggle" id="on">
-                            <input type="checkbox" class="toggle" id="strict">
-                        </div>
-                        <div class="text1">
-                            <span>POWER</span><span>STRICT</span>
-                        </div>
-                        <div id="turn"></div>
-                        <div class="text2">
-                            COUNT
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <h4>Rules:</h4>
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-dark">Turn on the power by cliking on the check box
-                            "power"</li>
-                        <li class="list-group-item list-group-item-dark">Click Start to start the game</li>
-                        <li class="list-group-item list-group-item-dark">For higher dificulty check the "strict" box (no
-                            mistakes allow)</li>
-                        <li class="list-group-item list-group-item-dark">Count will keep your score</li>
-                        <li class="list-group-item list-group-item-dark">Click Refresh Games to start again</li>
-                        <li class="list-group-item list-group-item-dark">Enjoy!</li>
-                    </ul>
-                </div>
+    <section class="main"></section>
+    <h2>PLAY SIMON</h2>
+   <!-- Game board -->
+   <div id="board">
+    <div id="green" class="color"></div>
+    <div id="red" class="color"></div>
+    <div id="blue" class="color"></div>
+    <div id="yellow" class="color"></div>
+    <div id="center-board">
+        <div class="row">
+            <div class="button-tag">
+                <div id="level" class="score">00</div>
+                <p>LEVEL</p>
+            </div>
+            <div class="button-tag">
+                <div id="highest-level" class="score">00</div>
+                <p>HIGHEST</p>
             </div>
         </div>
+        <div class="row">
+            <div class="button-tag">
+                <input id="start" class="button" type="button" name="start" value=" ">
+                <p>START</p>
+            </div>
+            <div class="button-tag">
+                <input id="reset" class="button" type="button" name="reset" value=" ">
+                <p>RESET</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+        <div class="card-footer">
+            <h4>Rules:</h4>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
+                <li class="list-group-item list-group-item-dark">To win find all the matches</li>
+                <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
+                <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again
+                </li>
+                <li class="list-group-item list-group-item-dark">Enjoy!</li>
+            </ul>
         </div>
     </section>
 
+</section>
     <!-- Page footer, information and get intouch feature -->
     <footer class="page-footer" id="footer-contact">
         <div class="container features">
@@ -185,15 +171,13 @@
     </footer>
 
     <!-- Scripts, Fontawesome, Bootstrap, Sweet alert JS, Email.JS -->
+    <!-- App Javascript -->
+    <script src="js/app.js"></script>
+    <script src="js/sendEmail.js"></script>
     <script src="https://kit.fontawesome.com/bc13f3adc8.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/sendEmail.js"></script>
 </body>
 
 </html>
